2809: change structure. fix theme install

--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/page--user.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/page--user.html.twig
@@ -1,4 +1,4 @@
-{{ include(directory ~ '/templates/components/header.html.twig') }}
+{{ include('@itkdev_base_theme/components/header.html.twig') }}
 
 <div class="page--user">
 
@@ -15,8 +15,8 @@
 
   </main>
 
-  {{ include(directory ~ '/templates/components/footer.html.twig') }}
+  {{ include('@itkdev_base_theme/components/footer.html.twig') }}
 
 </div>{# /.layout-container #}
 
-{{ include(directory ~ '/templates/components/navigation.html.twig') }}
+{{ include('@itkdev_base_theme/components/navigation.html.twig') }}
