--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/header.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/header.html.twig
@@ -2,20 +2,20 @@
 
   <div class="flex items-center place-items-start gap-5">
 
-    {{ include(directory ~ '/templates/components/nav-button.html.twig') }}
+    {{ include('@itkdev_base_theme/components/nav-button.html.twig') }}
 
     <div class="brand dark:text-white">
-      {{ page.header.itkdev_frontend_theme_sitebranding }}
+      {{ page.header.itkdev_base_theme_sitebranding }}
     </div>
 
     <div class="breadcrumb">
-      {{ page.header.itkdev_frontend_theme_breadcrumbs }}
+      {{ page.header.itkdev_base_theme_breadcrumbs }}
     </div>
 
   </div>
 
   <div class="ml-auto gap-4 md:flex">
-    {{ page.header|without('itkdev_frontend_theme_sitebranding', 'itkdev_frontend_theme_breadcrumbs') }}
+    {{ page.header|without('itkdev_base_theme_sitebranding', 'itkdev_base_theme_breadcrumbs') }}
   </div>
 
 </header>
