2834: Fix admin sidebar covers the site

--- a/web/themes/custom/itkdev/itkdev_base_theme/css/styles.css
+++ b/web/themes/custom/itkdev/itkdev_base_theme/css/styles.css
@@ -116,3 +116,8 @@
     @apply bg-red-100 text-red-700  border-red-300;
   }
 }
+
+/* Set relative container to avoid site hiding behind admin sidebar */
+.dialog-off-canvas-main-canvas {
+  position: relative;
+}
