--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/form-element.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/form-element.html.twig
@@ -9,7 +9,8 @@
     title_display not in ['after', 'before'] ? 'form-no-label',
     disabled == 'disabled' ? 'form-disabled',
     errors ? 'form-item--error',
-    'mb-3',
+    'mb-3 md:mb-5',
+    type == 'radio' ? 'flex items-center gap-3 cursor-pointer',
   ]
 %}
 {%
@@ -25,7 +26,7 @@
   {% if prefix is not empty %}
     <span class="field-prefix">{{ prefix }}</span>
   {% endif %}
-  {% if description_display == 'before' and description.content %}
+  {% if description_display == 'before' and description.content or type == 'radio' and description.content %}    
     <div{{ description.attributes }}>
       {{ description.content }}
     </div>
