--- a/web/themes/custom/itkdev/itkdev_base_theme/css/styles.css
+++ b/web/themes/custom/itkdev/itkdev_base_theme/css/styles.css
@@ -4,17 +4,30 @@
 
 @layer components {
   /* Define common background colors */
+
+  .theme-bg-primary {
+    background-color: var(--theme-primary);
+  }
+  .theme-bg-secondary {
+    background-color: var(--theme-secondary);
+  }
   .bg-primary {
-    @apply bg-stone-50 dark:bg-stone-950;
+    @apply theme-bg-primary dark:bg-zinc-900;
   }
   .bg-secondary {
-    @apply bg-stone-100 dark:bg-stone-900;
+    @apply theme-bg-secondary dark:bg-zinc-800;
   }
   .bg-brand {
-    @apply bg-teal-600 dark:bg-teal-700;
+    background-color: var(--theme-brand);
   }
 
   /* Define common text colors */
+  .theme-text-primary {
+    color: var(--theme-primary);
+  }
+  .theme-test-secondary {
+    color: var(--theme-secondary);
+  }
   .text-primary {
     @apply text-stone-950 dark:text-stone-50;
   }
@@ -22,18 +35,15 @@
     @apply text-stone-600 dark:text-stone-300;
   }
   .text-brand {
-    @apply text-teal-700 dark:text-teal-600;
+    color: var(--theme-brand);
   }
 
   /* Define common border colors */
   .border-primary {
-    @apply border-stone-400 dark:border-stone-600;
-  }
-  .border-secondary {
-    @apply border-stone-200 dark:border-stone-500;
+    border-color: var(--theme-border);
   }
   .border-brand {
-    @apply border-teal-700 dark:border-teal-600;
+    border-color: var(--theme-brand);
   }
 
   /* Define common buttons */
@@ -41,7 +51,7 @@
     @apply border border-brand bg-brand text-white rounded px-3 py-2 min-h-9 hover:bg-teal-700 hover:dark:bg-teal-600;
   }
   .btn-default {
-    @apply border border-secondary bg-secondary text-secondary rounded px-3 py-2 min-h-9 hover:bg-stone-200 hover:dark:bg-stone-800;
+    @apply border border-primary bg-secondary text-secondary rounded px-3 py-2 min-h-9 hover:bg-stone-200 hover:dark:bg-stone-800;
   }
   .btn-icon {
     @apply btn-default px-2 py-1;
