Add darkmode toggle and use alpine for site-navigation

--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/header.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/header.html.twig
@@ -1,4 +1,4 @@
-<header role="banner" class="bg-primary text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5 border-b border-secondary">
+<header role="banner" class="bg-white dark:bg-secondary text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5 border-b border-primary" >
 
   <div class="flex items-center place-items-start gap-5">
 
@@ -17,5 +17,7 @@
   <div class="ml-auto gap-4 md:flex">
     {{ page.header|without('itkdev_base_theme_sitebranding', 'itkdev_base_theme_breadcrumbs') }}
   </div>
+
+  {{ include('@itkdev_base_theme/components/darkmode-toggle.html.twig') }}
 
 </header>
