--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/menu-local-tasks.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/menu-local-tasks.html.twig
@@ -17,7 +17,7 @@
 <div class="max-w-3xl mx-auto px-3 my-3">
     {% if primary %}
     <h2 class="visually-hidden m-0 p-0">{{ 'Primary tabs'|t }}</h2>
-    <ul class="list-none flex gap-5 pl-0 m-0 border-b border-secondary" style="list-style: none; padding-left: 0;">{{ primary }}</ul>
+    <ul class="list-none flex gap-5 pl-0 m-0 border-b border-primary" style="list-style: none; padding-left: 0;">{{ primary }}</ul>
     {% endif %}
     {% if secondary %}
     <h2 class="visually-hidden">{{ 'Secondary tabs'|t }}</h2>
