--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/footer.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/footer.html.twig
@@ -1,3 +1,3 @@
-<footer role="contentinfo" class="container mx-auto border-t border-secondary py-8">
+<footer role="contentinfo" class="container mx-auto border-t border-primary py-8">
   {{ page.footer }}
 </footer>
