--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -4,5 +4,6 @@
     --theme-primary: #fff;
     --theme-secondary: #F4F4F5;
     --theme-brand: #047857;
+    --theme-brand-hover: #064E3B; 
     --theme-border: #E4E4E7;
 }
