--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/darkmode-toggle.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/darkmode-toggle.html.twig
@@ -1,4 +1,4 @@
-<div>
+<div class="content-center">
   <!-- Dark Mode Toggler -->
   <label :class="darkMode ? 'bg-zinc-900' : 'bg-zinc-100'" class="relative m-0 block h-7 w-14 rounded-full bg-zinc-100">
     <input type="checkbox" :value="darkMode" @change="darkMode = !darkMode" class="absolute top-0 z-50 m-0 h-full w-full cursor-pointer opacity-0">
