--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/input--submit.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/input--submit.html.twig
@@ -14,7 +14,7 @@
 #}
 {%
   set classes = [
-    'btn-primary px-5 cursor-pointer ml-auto'
+    'btn-primary px-5 cursor-pointer ms-auto'
   ]
 %}
 <input{{ attributes.addClass(classes) }} />{{ children }}
