--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
@@ -50,10 +50,11 @@
   <main role="main" class="">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     <div class="flex h-screen overflow-hidden">
-      <aside class="absolute min-w-60 left-0 top-0 z-9999 flex h-screen w-72.5 flex-col overflow-y-hidden bg-zinc-800 duration-300 ease-linear dark:bg-boxdark lg:static lg:translate-x-0 -translate-x-full translate-x-0">
+      <aside class="absolute min-w-60 left-0 top-0 z-9999 flex h-screen w-72 flex-col overflow-y-hidden bg-zinc-800 duration-300 ease-linear lg:static lg:translate-x-0 -translate-x-full translate-x-0" :class="sidebarToggle ? 'translate-x-0' : '-translate-x-full'" @click.outside="sidebarToggle = false" >
         {{ page.navigation }}
       </aside>
       <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
+        {{ include('@itkdev_project_theme/components/header.html.twig') }}
         <div class="content-wrapper">
           {{ page.content|without('itkdev_project_theme_messages') }}
         </div>
