--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig
@@ -2,7 +2,7 @@
     <a class="flex items-center gap-4" href="#" @click.prevent="dropdownOpen = ! dropdownOpen">
         <span class="hidden text-right lg:block">
             {# TODO: Get user name from drupal #}
-            <span class="block text-sm font-medium text-black dark:text-white">Bruger Navnesen</span> 
+            <span class="block text-sm font-medium text-black dark:text-white">Bruger Navnesen</span>
             {# TODO: Get role name from drupal #}
             <span class="block text-xs font-medium">Superuser</span>
         </span>
@@ -20,12 +20,12 @@
         <ul class="flex flex-col gap-5 border-b border-stroke px-3 py-3 dark:border-strokedark">
             <li>
                 <a href="profile.html" class="flex items-center gap-3 text-sm font-medium duration-300 ease-in-out hover:text-primary lg:text-base">
-                <i class="fa-solid fa-user me-1"></i>{{ "My profile"|t }}
+                <i class="fa-solid fa-user me-1"></i>{{ 'My profile'|t }}
                 </a>
             </li>
         </ul>
         <button class="flex items-center gap-3 px-3 py-3 text-sm font-medium duration-300 ease-in-out hover:text-primary lg:text-base">
-            <i class="fa-solid fa-sign-out me-1"></i>{{ "Log Out"|t }}
+            <i class="fa-solid fa-sign-out me-1"></i>{{ 'Log Out'|t }}
         </button>
     </div>
     <!-- Dropdown End -->
