2872: Make the menu responsive

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/block--system-branding-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/block--system-branding-block.html.twig
@@ -21,6 +21,8 @@
     <a href="{{ path('<front>') }}" rel="home">
       <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" fetchpriority="high" />
     </a>
+    <div>
+       {{ include('@itkdev_project_theme/components/nav-button.html.twig') }}
     </div>
   {% endif %}
 {% endblock %}
