--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/header.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/header.html.twig
@@ -4,7 +4,7 @@
 
   {{ include('@itkdev_base_theme/components/site-search.html.twig') }}
 
-  <div class="ml-auto gap-4 md:flex">
+  <div class="ml-auto gap-4 flex">
     {{ include('@itkdev_base_theme/components/darkmode-toggle.html.twig') }}
     {{ include('@itkdev_base_theme/components/user-menu.html.twig') }}
   </div>
