--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/page.html.twig
@@ -55,7 +55,7 @@
       </aside>
       <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
         {{ include('@itkdev_project_theme/components/header.html.twig') }}
-        <div class="content-wrapper">
+        <div class="content-wrapper container mx-auto my-6">
           {{ page.content|without('itkdev_project_theme_messages') }}
         </div>
       </div>
