--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -1,34 +1,34 @@
-{% set project_status = [0,1,3,2] %}
+{% set project_status = [0, 1, 3, 2] %}
 
 {% set project_status_max = max(project_status) %}
 {% set project_status_min = min(project_status) %}
 
 <div class="flex flex-col gap-1 w-20">
-    <div class="w-full h-2 
+    <div class="w-full h-2
         {% if project_status_min == 0 %}
             bg-zinc-400
         {% elseif project_status_max >= 1 %}
             {% if project_status_max == 1 %}
                 bg-green-600
-            {% endif %}    
+            {% endif %}
             {% if project_status_max == 2 %}
                 bg-yellow-600
-            {% endif %}    
+            {% endif %}
             {% if project_status_max == 3 %}
                 bg-red-600
             {% endif %}
         {% endif %}
     ">
     </div>
-    
+
     <div class="flex flex-row items-center gap-1 text-sm">
         {% for status in project_status %}
-            <div class="min-w-1 grow h-2 
+            <div class="min-w-1 grow h-2
                 {% if status == 0 %}
-                    bg-zinc-400    
+                    bg-zinc-400
                 {% endif %}
                 {% if status == 1 %}
-                    bg-green-600    
+                    bg-green-600
                 {% endif %}
                 {% if status == 2 %}
                     bg-yellow-600
