--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -1,3 +1,4 @@
+{# TODO: Get the real data from Drupal #}
 {% set project_status = [0, 1, 3, 2] %}
 
 {% set project_status_max = max(project_status) %}
