--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -7,3 +7,7 @@
     --theme-brand-hover: #064E3B; 
     --theme-border: #E4E4E7;
 }
+
+.project-members:last-child .spacing {
+    display: none;
+}
