2903: edit font weight, change event from event to project, remove todo

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
@@ -1,5 +1,4 @@
-<a href="/node/add/event" class="bg-green-700 hover:bg-green-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" data-drupal-link-system-path="node/add/project">
+<a href="/node/add/project" class="font-thin bg-green-700 hover:bg-green-600 text-white py-2 px-4 rounded inline-flex items-center" data-drupal-link-system-path="node/add/project">
   <i class="fa-solid fa-circle-plus mr-3"></i>
-  {# todo how do I add translation #}
   <span>{{ 'Create new project'|t }}</span>
 </a>
