--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--projects.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--projects.html.twig
@@ -38,10 +38,12 @@
     'cols-' ~ header|length,
     responsive ? 'responsive-enabled',
     sticky ? 'sticky-header',
+    'table-auto',
+    'w-full border-separate border-spacing-6 border-slate-400'
   ]
 %}
 
-<div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-boxdark sm:px-7.5 xl:col-span-8">
+<div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8">
 <table{{ attributes.addClass(classes) }}>
   {% if caption_needed %}
     <caption>
@@ -64,6 +66,8 @@
               set column_classes = [
                 'views-field',
                 'views-field-' ~ fields[key],
+                'font-light',
+                'text-left'
               ]
             %}
           {% endif %}
