--- a/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
+++ b/web/themes/custom/itkdev/itkdev_project_theme/css/project-styles.css
@@ -30,14 +30,19 @@
  *
  */
 
- .js input.form-autocomplete {
+/* remove ugly spinner from autocomplete input  */
+.js input.form-autocomplete {
   background-image: none;
 }
+
+/* replace spinner, and doing this it only shows when on input and load */
 .js input.form-autocomplete.ui-autocomplete-loading {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3e  %3cstyle type='text/css'%3e%40keyframes s%7b0%25%7btransform:rotate(0deg) translate(-50%25,-50%25)%7d50%25%7btransform:rotate(430deg) translate(-50%25,-50%25);stroke-dashoffset:20%7d100%25%7btransform:rotate(720deg) translate(-50%25,-50%25)%7d%7dellipse%7banimation:s 1s linear infinite%7d%3c/style%3e  %3cg transform='translate(5 5)'%3e    %3cellipse fill='none' ry='4' rx='4' cy='5' cx='5' stroke='%237e96a7' stroke-width='1' stroke-dashoffset='6.125' stroke-dasharray='25' transform='translate(-5 -5)'/%3e  %3c/g%3e%3c/svg%3e");
   background-position: 98% center;
 }
 
+
+/* Style dropdown from autocomplete input */
 .ui-autocomplete .ui-menu-item {
   height: 50px;
   border-bottom: 1px solid rgb(203 213 225); /* bg-slate-300 */
