--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig
@@ -1,4 +1,6 @@
-<a href="/node/add/project" class="font-thin bg-green-700 hover:bg-green-600 text-white py-2 px-4 rounded inline-flex items-center" data-drupal-link-system-path="node/add/project">
+{% set path = path('node.add', { node_type: 'project' }) %}
+
+<a href={{ path }} class="font-thin bg-green-700 hover:bg-green-600 text-white py-2 px-4 rounded inline-flex items-center" data-drupal-link-system-path="node/add/project">
   <i class="fa-solid fa-circle-plus mr-3"></i>
   <span>{{ 'Create new project'|t }}</span>
 </a>
