Added project status

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
@@ -14,9 +14,13 @@
  */
 #}
 {% set owner = drupal_entity('user', projectGroup.uid.target_id)['#user'].field_name.value %}
+{% set project_status = [0, 1, 3, 2] %}
+{% set edit_link_text %}
+  <i class="fa-solid fa-pencil"></i>
+{% endset %}
 
 <div class="container my-6">
-  <h1>{{ label }}</h1>
+  <h1 class="inline-block">{{ label }}</h1><a href="{{ url('entity.node.edit_form', {'node': 10}) }}" class="inline-block mx-3 btn-icon bg-black text-white hover:bg-stone-700"><i class="fa-solid fa-pencil"></i></a>
   <p>{{ content.field_description }}</p>
   <div class="grid grid-cols-4">
     <div>
@@ -38,7 +42,7 @@
 <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
   <header class="flex justify-between px-4 py-4 border-b">
     <h2 class="m-0 text-lg dark:text-white">{{ 'Will we?'|t }}</h2>
-    <div>status display here</div>
+    <div>{% include '@itkdev_project_theme/components/project-status.html.twig' with project_status %}</div>
   </header>
   <div class="flex justify-between px-4 py-4">
     <div>{{ 'Project eveluation of whether it should be used'|t }}</div>
