--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -1,5 +1,15 @@
-{# TODO: Get the real data from Drupal #}
-{% set project_status = [0, 1, 3, 2] %}
+{#
+/**
+ * @file
+ * AI screening implementation to display a node.
+ *
+ * @see web/core/modules/node/templates/node.html.twig
+ *
+ * This component requires additional parameters to be included.
+ *   - @param array project_status
+ *       A list of integers with values 0-3 that indicates the status of each project track.
+ */
+#}
 
 {% set project_status_max = max(project_status) %}
 {% set project_status_min = min(project_status) %}
