--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
@@ -42,7 +42,7 @@
 <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
   <header class="flex justify-between px-4 py-4 border-b">
     <h2 class="m-0 text-lg dark:text-white">{{ 'Will we?'|t }}</h2>
-    <div>{{ include('@itkdev_project_theme/components/project-status.html.twig', {project_status: 'project_status'}) }}</div>
+    <div>{{ include('@itkdev_project_theme/components/project-status.html.twig', {project_status: project_status}) }}</div>
   </header>
   <div class="flex justify-between px-4 py-4">
     <div>{{ 'Project eveluation of whether it should be used'|t }}</div>
