2903: css fix after merge with develop

--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view.html.twig
@@ -39,7 +39,7 @@
 %}
 <div{{ attributes.addClass(classes) }}>
 <div class="flex justify-between my-7">
-<h1 class="text-4xl dark:text-white">{{ view.title }}</h1>
+<h1 class="text-4xl dark:text-white m-0">{{ view.title }}</h1>
     {{ include('@itkdev_project_theme/components/new-project-button.html.twig') }}
 </div>
 
