--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
@@ -46,7 +46,7 @@
   </header>
   <div class="flex justify-between px-4 py-4">
     <div>{{ 'Project eveluation of whether it should be used'|t }}</div>
-    <div><a href="/">{{ 'See project report'|t }}</a></div>
+    <div><a class="underline" href="/">{{ 'See project report'|t }}</a></div>
   </div>
 </div>
 <div class="grid grid-cols-2 gap-4">
