--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--projects.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--projects.html.twig
@@ -32,17 +32,21 @@
  * @ingroup themeable
  */
 #}
+{% extends "@itkdev_project_theme/content-wrapper.html.twig" %}
+
+{% block title %}
+  <h1 class="text-4xl dark:text-white m-0">{{ view.title }}</h1>
+{% endblock %}
+{% block controls %}
+  {{ include('@itkdev_project_theme/components/new-project-button.html.twig') }}
+{% endblock %}
+{% block content %}
 {%
   set classes = [
     dom_id ? 'js-view-dom-id-' ~ dom_id,
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
-<div class="flex justify-between my-7">
-<h1 class="text-4xl dark:text-white m-0">{{ view.title }}</h1>
-    {{ include('@itkdev_project_theme/components/new-project-button.html.twig') }}
-</div>
-
   {% if header %}
     <header>
       {{ header }}
@@ -70,3 +74,4 @@
 
   {{ feed_icons }}
 </div>
+{% endblock %}
