--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--projects.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--projects.html.twig
@@ -32,7 +32,7 @@
  * @ingroup themeable
  */
 #}
-{% extends "@itkdev_project_theme/content-wrapper.html.twig" %}
+{% extends '@itkdev_project_theme/content-wrapper.html.twig' %}
 
 {% block title %}
   <h1 class="text-4xl dark:text-white m-0">{{ view.title }}</h1>
