--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -11,8 +11,8 @@
  */
 #}
 
-{% set project_status_max = max(project_status) %}
-{% set project_status_min = min(project_status) %}
+{% set project_status_max = max(project_status.track_evaluation) %}
+{% set project_status_min = min(project_status.track_evaluation) %}
 
 <div class="flex flex-col gap-1 w-20">
     <div class="w-full h-2
@@ -33,7 +33,7 @@
     </div>
 
     <div class="flex flex-row items-center gap-1 text-sm">
-        {% for status in project_status %}
+        {% for status in project_status.track_evaluation %}
             <div class="min-w-1 grow h-2
                 {% if status == 0 %}
                     bg-zinc-400
@@ -50,4 +50,4 @@
             "></div>
         {% endfor %}
     </div>
-</div
+</div>
