--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table.html.twig
@@ -39,11 +39,11 @@
     responsive ? 'responsive-enabled',
     sticky ? 'sticky-header',
     'table-auto',
-    'w-full border-separate border-spacing-6 border-slate-400'
+    'w-full border-separate border-slate-400'
   ]
 %}
 
-<div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8">
+<div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md">
 <table{{ attributes.addClass(classes) }}>
   {% if caption_needed %}
     <caption>
