--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view-table--front.html.twig
@@ -44,89 +44,88 @@
 %}
 
 <div class="rounded-sm border border-stroke bg-white px-5 pb-5 pt-7.5 shadow-default dark:border-strokedark dark:bg-slate-600 sm:px-7.5 xl:col-span-8 drop-shadow-md">
-
-<div class="my-4">
-  <a href="{{ url('node.add', {'node_type': 'project'} ) }}" class="inline-block btn-primary bg-green-700 text-white hover:bg-green-500"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new project'|t }}</span></a>
-</div>
-<div class="text-xl text-slate-500">{{ 'Latest'|t }}</div>
-<table{{ attributes.addClass(classes) }}>
-  {% if caption_needed %}
-    <caption>
-    {% if caption %}
-      {{ caption }}
-    {% else %}
-      {{ title }}
+  <div class="my-4">
+    <a href="{{ url('node.add', {node_type: 'project'}) }}" class="inline-block btn-primary bg-green-700 text-white hover:bg-green-500"><i class="fa-solid fa-circle-plus"></i><span class="ml-3">{{ 'Create new project'|t }}</span></a>
+  </div>
+  <div class="text-xl text-slate-500">{{ 'Latest'|t }}</div>
+  <table{{ attributes.addClass(classes) }}>
+    {% if caption_needed %}
+      <caption>
+      {% if caption %}
+        {{ caption }}
+      {% else %}
+        {{ title }}
+      {% endif %}
+      {% if (summary_element is not empty) %}
+        {{ summary_element }}
+      {% endif %}
+      </caption>
     {% endif %}
-    {% if (summary_element is not empty) %}
-      {{ summary_element }}
-    {% endif %}
-    </caption>
-  {% endif %}
-  {% if header %}
-    <thead>
-      <tr>
-        {% for key, column in header %}
-          {% if column.default_classes %}
-            {%
-              set column_classes = [
-                'views-field',
-                'views-field-' ~ fields[key],
-                'font-light',
-                'text-left'
-              ]
-            %}
-          {% endif %}
-          <th{{ column.attributes.addClass(column_classes).setAttribute('scope', 'col') }}>
-            {%- if column.wrapper_element -%}
-              <{{ column.wrapper_element }}>
+    {% if header %}
+      <thead>
+        <tr>
+          {% for key, column in header %}
+            {% if column.default_classes %}
+              {%
+                set column_classes = [
+                  'views-field',
+                  'views-field-' ~ fields[key],
+                  'font-light',
+                  'text-left'
+                ]
+              %}
+            {% endif %}
+            <th{{ column.attributes.addClass(column_classes).setAttribute('scope', 'col') }}>
+              {%- if column.wrapper_element -%}
+                <{{ column.wrapper_element }}>
+                  {%- if column.url -%}
+                    <a href="{{ column.url }}" title="{{ column.title }}" rel="nofollow">{{ column.content }}{{ column.sort_indicator }}</a>
+                  {%- else -%}
+                    {{ column.content }}{{ column.sort_indicator }}
+                  {%- endif -%}
+                </{{ column.wrapper_element }}>
+              {%- else -%}
                 {%- if column.url -%}
                   <a href="{{ column.url }}" title="{{ column.title }}" rel="nofollow">{{ column.content }}{{ column.sort_indicator }}</a>
                 {%- else -%}
-                  {{ column.content }}{{ column.sort_indicator }}
+                  {{- column.content }}{{ column.sort_indicator }}
                 {%- endif -%}
-              </{{ column.wrapper_element }}>
-            {%- else -%}
-              {%- if column.url -%}
-                <a href="{{ column.url }}" title="{{ column.title }}" rel="nofollow">{{ column.content }}{{ column.sort_indicator }}</a>
-              {%- else -%}
-                {{- column.content }}{{ column.sort_indicator }}
               {%- endif -%}
-            {%- endif -%}
-          </th>
-        {% endfor %}
-      </tr>
-    </thead>
-  {% endif %}
-  <tbody>
-    {% for row in rows %}
-      <tr{{ row.attributes }}>
-        {% for key, column in row.columns %}
-          {% if column.default_classes %}
-            {%
-              set column_classes = [
-                'views-field'
-              ]
-            %}
-            {% for field in column.fields %}
-              {% set column_classes = column_classes|merge(['views-field-' ~ field]) %}
-            {% endfor %}
-          {% endif %}
-          <td{{ column.attributes.addClass(column_classes) }}>
-            {%- if column.wrapper_element -%}
-              <{{ column.wrapper_element }}>
-              {% for content in column.content %}
-                {{ content.separator }}{{ content.field_output }}
+            </th>
+          {% endfor %}
+        </tr>
+      </thead>
+    {% endif %}
+    <tbody>
+      {% for row in rows %}
+        <tr{{ row.attributes }}>
+          {% for key, column in row.columns %}
+            {% if column.default_classes %}
+              {%
+                set column_classes = [
+                  'views-field'
+                ]
+              %}
+              {% for field in column.fields %}
+                {% set column_classes = column_classes|merge(['views-field-' ~ field]) %}
               {% endfor %}
-              </{{ column.wrapper_element }}>
-            {%- else -%}
-              {% for content in column.content %}
-                {{- content.separator }}{{ content.field_output -}}
-              {% endfor %}
-            {%- endif %}
-          </td>
-        {% endfor %}
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
+            {% endif %}
+            <td{{ column.attributes.addClass(column_classes) }}>
+              {%- if column.wrapper_element -%}
+                <{{ column.wrapper_element }}>
+                {% for content in column.content %}
+                  {{ content.separator }}{{ content.field_output }}
+                {% endfor %}
+                </{{ column.wrapper_element }}>
+              {%- else -%}
+                {% for content in column.content %}
+                  {{- content.separator }}{{ content.field_output -}}
+                {% endfor %}
+              {%- endif %}
+            </td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
