--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig
@@ -18,7 +18,10 @@
 {% set project_status = project_status_evaluation(node.id) %}
 
 <div class="container my-6">
-  <h1 class="inline-block">{{ label }}</h1><a href="{{ url('entity.node.edit_form', {node: node.id}) }}" class="inline-block mx-3 btn-icon bg-black text-white hover:bg-stone-700"><i class="fa-solid fa-pencil"></i></a>
+  <h1 class="inline-block">{{ label }}</h1>
+  {% if node.access('update') %}
+    <a href="{{ url('entity.node.edit_form', {node: node.id}) }}" class="inline-block mx-3 btn-icon bg-black text-white hover:bg-stone-700"><i class="fa-solid fa-pencil"></i></a>
+  {% endif %}
   <p>{{ content.field_description }}</p>
   <div class="grid grid-cols-4">
     <div>
