--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--front.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/views-view--front.html.twig
@@ -45,9 +45,10 @@
   {{ title }}
   {{ title_suffix }}
 
-  {% if header %}
+  {% set header_rendered = header|render %}
+  {% if header_rendered|trim %}
     <header>
-      {{ header }}
+      {{ header_rendered }}
     </header>
   {% endif %}
 
