--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
@@ -14,14 +14,32 @@
 <div class="grid grid-cols-3 gap-4 xl:grid-cols-4 my-6">
   <div class="bg-white p-4 drop-shadow-md">
     <div class="text-3xl mb-4 font-extrabold text-green-700">{{ data.stats.approvedCount }}</div>
-    <div>{{ 'Projects that comply to all demands for use'|t }}</div>
+    <div>
+      {% trans %}
+        {{ 'Project that complies to all demands for use' }}
+      {% plural count %}
+        {{ 'Projects that comply to all demands for use' }}
+      {% endtrans %}
+    </div>
   </div>
   <div class="bg-white p-4 drop-shadow-md">
     <div class="text-3xl mb-4 font-extrabold text-yellow-700">{{ data.stats.inProgressCount }}</div>
-    <div>{{ 'Projects that partly comply to some demands for use'|t }}</div>
+    <div>
+      {% trans %}
+        {{ 'Project that complies to some demands for use'|t }}
+      {% plural count %}
+        {{ 'Projects that comply to some demands for use'|t }}
+      {% endtrans %}
+    </div>
   </div>
   <div class="bg-white p-4 drop-shadow-md">
     <div class="text-3xl mb-4 font-extrabold text-red-700">{{ data.stats.refusedCount }}</div>
-    <div>{{ "Projects that don't comply to the demands for use"|t }}</div>
+    <div>
+      {% trans %}
+        {{ "Project that does not comply to the demands for use"|t }}
+      {% plural count %}
+        {{ "Projects that don't comply to the demands for use"|t }}
+      {% endtrans %}
+    </div>
   </div>
 </div>
