--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
@@ -36,9 +36,9 @@
     <div class="text-3xl mb-4 font-extrabold text-red-700">{{ data.stats.refusedCount }}</div>
     <div>
       {% trans %}
-        {{ "Project that does not comply to the demands for use"|t }}
+        {{ 'Project that does not comply to the demands for use'|t }}
       {% plural count %}
-        {{ "Projects that don't comply to the demands for use"|t }}
+        {{ 'Projects that don't comply to the demands for use'|t }}
       {% endtrans %}
     </div>
   </div>
