--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig
@@ -16,9 +16,9 @@
     <div class="text-3xl mb-4 font-extrabold text-green-700">{{ data.stats.approvedCount }}</div>
     <div>
       {% trans %}
-        {{ 'Project that complies to all demands for use' }}
-      {% plural count %}
-        {{ 'Projects that comply to all demands for use' }}
+        Project that complies to all demands for use
+      {% plural data.stats.approvedCount %}
+        Projects that comply to all demands for use
       {% endtrans %}
     </div>
   </div>
@@ -26,9 +26,9 @@
     <div class="text-3xl mb-4 font-extrabold text-yellow-700">{{ data.stats.inProgressCount }}</div>
     <div>
       {% trans %}
-        {{ 'Project that complies to some demands for use'|t }}
-      {% plural count %}
-        {{ 'Projects that comply to some demands for use'|t }}
+        Project that complies to some demands for use
+      {% plural data.stats.approvedCount %}
+        Projects that comply to some demands for use
       {% endtrans %}
     </div>
   </div>
@@ -36,9 +36,9 @@
     <div class="text-3xl mb-4 font-extrabold text-red-700">{{ data.stats.refusedCount }}</div>
     <div>
       {% trans %}
-        {{ 'Project that does not comply to the demands for use'|t }}
-      {% plural count %}
-        {{ 'Projects that don't comply to the demands for use'|t }}
+        Project that does not comply to the demands for use
+      {% plural data.stats.approvedCount %}
+        Projects that do not comply to the demands for use
       {% endtrans %}
     </div>
   </div>
