--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
@@ -18,5 +18,12 @@
 {% extends '@itkdev_project_theme/content-wrapper.html.twig' %}
 
 {% block content %}
-  {{ form }}
+  <div class="grid grid-cols-2 gap-4">
+    <div>
+      {{ form|without('advanced') }}
+    </div>
+    <div>
+      Group stuff here
+    </div>
+  </div>
 {% endblock %}
