--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig
@@ -11,8 +11,9 @@
  */
 #}
 
-{% set project_status_max = max(project_status.track_evaluation) %}
-{% set project_status_min = min(project_status.track_evaluation) %}
+{% set evaluation = project_status.track_evaluation|default([0]) %}
+{% set project_status_max = max(evaluation) %}
+{% set project_status_min = min(evaluation) %}
 
 <div class="flex flex-col gap-1 w-20">
     <div class="w-full h-2
