--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/content-wrapper.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/content-wrapper.html.twig
@@ -1,11 +1,17 @@
 <div class="flex justify-between my-7 px-5">
   {% block title %}
     <div class="block">
-      {% if pageTitle is not empty %}
-        <h1 class="dark:text-white inline-block">
-          {{ pageTitle }}
-        </h1>
-      {% endif %}
+      <h1 class="dark:text-white inline-block font-normal">
+        {% if view is defined %}
+          {{ view.title }}
+        {% elseif theme_hook_original is same as 'node' %}
+          {{ node.label }}
+        {% elseif theme_hook_original is same as 'user' %}
+          {{ content.field_name }}
+        {% elseif theme_hook_original is same as 'node_edit_form' %}
+          {{ form['#title'] }}
+        {% endif %}
+      </h1>
     </div>
   {% endblock %}
 
