2919: add helptext to department fieldset

--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/fieldset.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/fieldset.html.twig
@@ -16,12 +16,15 @@
     ]
   %}
   <legend>
-  <div class="p-5">
+  <div class="p-5 padding-around-h2">
     <h2 class="text-lg font-semibold dark:text-white my-0">{{ legend.title }}</h2>
    </div>
   </legend>
-  <div class="border-b border-primary w-full"></div>
-  <div class="px-5 py-5">
+  <div class="fieldset-border border-b border-primary w-full"></div>
+     {% if description_display in ['after', 'invisible'] and description.content %}
+      <div{{ description.attributes.addClass('description pt-2') }}>{{ description.content }}</div>
+    {% endif %}
+  <div class="p-5">
    {{ children }}
    </div>
 </fieldset>
