2919: twig cs fixer

--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/status-messages.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/status-messages.html.twig
@@ -32,7 +32,7 @@
     'alert',
     'alert-dismissable',
     'fade',
-    'show'
+    'show',
   ]
   %}
   <div role="alert" aria-label="{{ status_headings[type] }}"{{ attributes|without('role', 'aria-label').addClass(classes) }}>
