--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig
@@ -2,7 +2,7 @@
 {% set role = {
   administrator: 'Administrator'|trans,
   editor: 'Editor'|trans,
-  user: 'User'|trans
+  user: 'User'|trans,
   }[user.getRoles(true)|first|default('user')]
 %}
 
