--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/input.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/forms/input.html.twig
@@ -14,7 +14,7 @@
 #}
 {%
   set classes = [
-    'bg-primary text-primary border border-primary rounded-md py-2 px-3 my-1 w-full'
+    'bg-primary text-primary border border-primary rounded-md py-2 px-3 my-1 w-full',
   ]
 %}
 <input{{ attributes.addClass(classes) }} />{{ children }}
