2919: remove ekstra padding on radios

--- a/web/themes/custom/itkdev/itkdev_base_theme/templates/components/fieldset.html.twig
+++ b/web/themes/custom/itkdev/itkdev_base_theme/templates/components/fieldset.html.twig
@@ -24,7 +24,7 @@
      {% if description_display in ['after', 'invisible'] and description.content %}
       <div{{ description.attributes.addClass('description pt-2') }}>{{ description.content }}</div>
     {% endif %}
-  <div class="p-5">
+  <div class="children-of-fieldset">
    {{ children }}
    </div>
 </fieldset>
